syntax = "proto3";

import "google/protobuf/timestamp.proto";
package ru.tinkoff;

option java_package = "ru.tinkoff.proto";
option java_multiple_files = true;

service AccountService {
  rpc save(AccountProto) returns (UUIDProto);
  rpc findById(UUIDProto) returns (AccountCredProto);
}

message AccountProto {
  string typeName = 1;
  string login = 2;
  string email = 3;
  string phone = 4;
  google.protobuf.Timestamp creation = 5;
  google.protobuf.Timestamp updating = 6;
  double latitude = 7;
  double longitude = 8;
}

message UUIDProto {
  string value = 1;
}

message AccountCredProto {
  string login = 1;
  string email = 2;
  string phone = 3;
}